--- a/style.css
+++ b/style.css
@@ -2,7 +2,16 @@ body {
   font-family: 'Oswald', sans-serif;
 }
 
+.card {
+  width: 300px;
+  padding: 10px;
+  border: 2px solid black;
+  background: #3199BC;
+}
+
 .title {
+  padding-top: 0;
+  margin-top: 5px;
   color: 	#3D0F0C;
   font-weight: bold;
   text-align: center;
@@ -16,24 +25,32 @@ body {
 }
 
 .image-container {
-  text-align: center;
+  font-size: 10px;
 }
 
 .image-fawkes {
-  border: 3px solid black;
+  text-align: center;
+  width: 95%;
+  border: 5px;
+}
+
+.border {
+  margin: 5px;
+  padding: 5px;
+  border: 2px solid black;
 }
 
 .about-fawkes {
   color: 	#3D0F0C;
   font-weight: bold;
   text-align: center;
-  font-size: 25px;
+  font-size: 20px;
 }
 
 .interesting-facts {
-  text-align: center;
-  list-style-type: none;
-  font-size: 20px; 
+  color: black;
+  font-weight: bold;
+  font-size: 15px;
 }
 
 span {
@@ -44,11 +61,12 @@ span {
   color: 	#3D0F0C;
   font-weight: bold;
   text-align: center;
-  font-size: 25px;
+  font-size: 20px;
 }
 .about-information {
-  text-align: center;
-  font-size: 20px;
+  text-align: justify;
+  font-size: 15px;
+  padding: 10px;
 }
 
 .copyright {
