--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Oswald', sans-serif;
+  font-weight: 400;
 }
 
 .card {
@@ -55,7 +56,7 @@ body {
 }
 
 span {
-  font-weight: bold;
+  font-weight: 500;
 }
 
 .about-phoenix {
